[package]
name = "rust-test"
version = "0.1.0"
authors = [ "kvba (https://github.com/kvba0000)" ]
categories = [ "examples" ]
keywords = [ "rust", "examples", "test" ]
license = "MIT"
edition = "2021"

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.12.9", features = [ "blocking", "json" ] }
serde = { version = "1.0.214", features = [ "derive" ] }
sonyflake = "0.3.0"
tokio = { version = "1.39.0", features = [ "macros", "rt-multi-thread" ] }