[package]
name = "rust-test"
version = "0.1.0"
authors = [ "kvba (https://github.com/kvba0000)" ]
categories = [ "examples" ]
keywords = [ "rust", "examples", "test" ]
license = "MIT"
edition = "2021"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.12.9", features = [ "blocking", "json" ] }
serde = { version = "1.0.214", features = [ "derive" ] }
tokio = { version = "1.39.0", features = [ "macros", "rt-multi-thread" ] }
